# glsl_practice

./: CMakeLists.txt  README.md  conanfile.txt
src/: 01_hell.cc  CMakeLists.txt
